--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Hi Love ❤️</h1>
     <p>This is for you. Swipe through each page to find sweet surprises!</p>
-    <img src="images/gf1.jpg" alt="Your Smile" class="image">
+    <img src="gf1.jpg" alt="Your Smile" class="image">
     <div class="nav">
         <a href="page2.html">Start the Journey →</a>
     </div>
