--- a/page2.html
+++ b/page2.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Happy Moments 2</h1>
-    <img src="images/gf2.jpg" alt="GF Image 2" class="image">
+    <img src="gf2.jpg" alt="GF Image 2" class="image">
     <div class="nav">
         <a href="index.html">Home</a> | <a href="index.html">← Home</a> | <a href="page3.html">Next →</a>
     </div>
