--- a/page3.html
+++ b/page3.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Happy Moments 3</h1>
-    <img src="images/gf3.jpg" alt="GF Image 3" class="image">
+    <img src="gf3.jpg" alt="GF Image 3" class="image">
     <div class="nav">
         <a href="index.html">Home</a> | <a href="page2.html">← Previous</a> | <a href="page4.html">Next →</a>
     </div>
