--- a/page4.html
+++ b/page4.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Happy Moments 4</h1>
-    <img src="images/gf4.jpg" alt="GF Image 4" class="image">
+    <img src="gf4.jpg" alt="GF Image 4" class="image">
     <div class="nav">
         <a href="index.html">Home</a> | <a href="page3.html">← Previous</a> | <a href="page5.html">Next →</a>
     </div>
