--- a/page5.html
+++ b/page5.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Happy Moments 5</h1>
-    <img src="images/gf5.jpg" alt="GF Image 5" class="image">
+    <img src="gf5.jpg" alt="GF Image 5" class="image">
     <div class="nav">
         <a href="index.html">Home</a> | <a href="page4.html">← Previous</a> | <a href="page6.html">Next →</a>
     </div>
