--- a/page6.html
+++ b/page6.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Happy Moments 6</h1>
-    <img src="images/gf6.jpg" alt="GF Image 6" class="image">
+    <img src="gf6.jpg" alt="GF Image 6" class="image">
     <div class="nav">
         <a href="index.html">Home</a> | <a href="page5.html">← Previous</a> | <a href="page7.html">Next →</a>
     </div>
