--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hi Love ❤️</h1>
-    <p>This is for you. Swipe through each page to find sweet surprises!</p>
+    <h1>Hi MyLove💕Hajiii💕</h1>
+    <p>This is for you🤞🫰. Swipe through each page to find sweet surprises!</p>
     <img src="gf1.jpg" alt="Your Smile" class="image">
     <div class="nav">
         <a href="page2.html">Start the Journey →</a>
